Fixing graalvisor's build script.